@@ -1,15 +1,18 @@
 package my.jvmlearn.capture3;
 
-/**
- * VM参数: -verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
- */
-public class MinorGC {
+public class MemoryAllocateWithCollectStrategy {
     private static final int _1MB = 1024 * 1024;
 
     public static void main(String[] args) {
-        MinorGC.testAllocation();
+        MemoryAllocateWithCollectStrategy.testHandlePromotion();
     }
 
+    /**
+     * VM参数: -verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
+     * -XX:+PrintGCDateStamps
+     * -XX:+PrintGCTimeStamps
+     */
+    @SuppressWarnings("unused")
     public static void testAllocation() {
         byte[] allocation1, allocation2, allocation3, allocation4;
         allocation1 = new byte[2 * _1MB];
@@ -17,4 +20,54 @@ public class MinorGC {
         allocation3 = new byte[2 * _1MB];
         allocation4 = new byte[4 * _1MB];
     }
+
+    /**
+     * VM参数: -verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
+     * -XX:PretenureSizeThreshold=3145728 (3M)此参数只对Serial和ParNew两款收集器有效
+     * Parallel Scavenge收集器不认识这个参数,Parallel Scavenge收集器一般不需要设置。如果遇到必须设置此参数的场合，
+     * 可以考虑ParNew和CMS的收集器组合
+     */
+    @SuppressWarnings("unused")
+    public static void testPretenureSizeThreshold() {
+        byte[] allocation;
+        allocation = new byte[8 * _1MB];
+    }
+
+    /**
+     * VM参数: -verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
+     * -XX:MaxTenuringThreshold=1
+     * -XX:+PrintTenuringDistribution
+     */
+    @SuppressWarnings("unused")
+    public static void testTenuringThreshold() {
+        byte[] allocation1, allocation2, allocation3;
+        allocation1 = new byte[_1MB / 4];
+        //什么时候进入老年代取决于XX:MaxTenuringThreshold设置
+        allocation2 = new byte[4 * _1MB];
+        allocation3 = new byte[4 * _1MB];
+        allocation3 = null;
+        allocation3 = new byte[4 * _1MB];
+    }
+    /**
+     * VM参数: -verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
+     * -XX:-HandlePromotionFailure=false
+     */
+    @SuppressWarnings("unused")
+    public static void testHandlePromotion() {
+        byte[] allocation1, allocation2, allocation3, allocation4, allocation5, allocation6, allocation7;
+        allocation1 = new byte[2 * _1MB];
+        allocation2 = new byte[2 * _1MB];
+        allocation3 = new byte[2 * _1MB];
+        allocation1 = null;
+        allocation4 = new byte[2 * _1MB];
+        allocation5 = new byte[2 * _1MB];
+        allocation6 = new byte[2 * _1MB];
+        allocation4 = null;
+        allocation5 = null;
+        allocation6 = null;
+        allocation7 = new byte[2 * _1MB];
+    }
+
+
+
 }
